examples/shop/productcatalog/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: productcatalog
  labels:
    istio.io/rev: asm-managed
