examples/shop/productcatalog/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: productcatalog-virtualservice
    namespace: productcatalog
spec:
    hosts:
    - productcatalog.productcatalog.svc.cluster.local
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: productcatalog
          port:
            number: 80
